# prediction_granted_number_of_nights

./: Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
data-science-test/: 1_data_cleaning_and_preprocessing.ipynb  2_data_medeling.ipynb  Dockerfile
data-science-test/data/cleaned_data/: y_test.csv  y_train.csv
notebooks/: Data-science_test.ipynb
notebooks/.ipynb_checkpoints/: Data-science_test-checkpoint.ipynb
