[project]
name = "granted-number-of-night-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Soufiane Belhabibe",email = "soufiane.linedata@se.linedata.com"}
]
readme = "README.md"
requires-python = ">=3.11.0"

[tool.poetry.dependencies]
pandas = "^2.2.3"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
